# motion_ifc

./: .gitignore  CMakeLists.txt  README.md  comm_logic.py  communication_ifc.py  controllers.py  crkt_common.py  global_time.py  interp_logic.py  interpolate_logic.py  main.py  motion_cmd_ifc.py  motion_ifc.py  move_logic.py  package.xml  robot_cmd_ifc.py  robot_cmd_query.py  robot_state_ifc.py  robot_state_query.py  servo_logic.py  test.py  test_interpolation.py  topic_type_map.py  watch_dog.py
include/motion_ifc/: Communication.h  ControllerData.h  Controllers.h  DataConversion.h  FcnHandle.h  Interpolate.h  MotionCmd.h  MotionCmdIfc.h  RobotCmd.h  RobotCmdIfc.h  RobotState.h  RobotStateIfc.h  Trajectory.h  WatchDog.h  crtkCommon.h  motoincmdifc.h  robotcmdifc.h  robotstateifc.h
python/: README.md  communication_ifc.py  controllers.py  crkt_common.py  interp_logic.py  motion_cmd_ifc.py  robot_cmd_ifc.py  robot_state_ifc.py  test_interpolation.py  watch_dog.py
src/: Communication.cpp  CommunicationTest.cpp  ControllerData.cpp  ControllerTest.cpp  Controllers.cpp  ConversionTest.cpp  DataConversion.cpp  FcnHandleTest.cpp  Interpolate.cpp  MotionCmd.cpp  MotionCmdIfc.cpp  RobotCmd.cpp  RobotCmdIfc.cpp  RobotState.cpp  RobotStateIfc.cpp  Trajectory.cpp  Trajectory.cpp.bak  TrajectoryTest.cpp  crtkCommon.cpp
tests/: CommunicationTest.cpp  ControllerTest.cpp  ConversionTest.cpp  FcnHandleTest.cpp  TrajectoryTest.cpp
